# yes_english_club

./: .env.example  .gitignore  pyproject.toml
core/: admin.py  context_processors.py  forms.py  models.py  signals.py  telegram.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_galleryimage.py  0002_rename_url_video_original_url_video_embed_url_and_more.py  0002_request_phone_number.py  0002_teacher_phone_number_alter_galleryimage_image_and_more.py  0003_remove_teacher_education_remove_teacher_experience_and_more.py  0003_review.py  0004_service.py  0005_alter_request_options_alter_review_options_and_more.py  0006_teacher_alter_request_message_alter_review_rating.py  0007_logo.py  0008_video.py
core/static/core/css/: style.css
core/static/core/js/: script.js
core/templates/core/: about.html  base.html  contacts.html  create_review.html  login.html  requests.html  reviews.html  schedule.html  services.html  thanks_for_request.html  thanks_for_review.html
core/templates/core/includes/: footer.html  nav.html  scroll_top.html
main/: settings.py  urls.py
