[project]
name = "yes-english-club"
version = "0.1.0"
description = ""
authors = [
    {name = "Ollie",email = "Ollie_0@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-phonenumber-field[phonenumberslite] (>=8.1.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
